[project]
name = "text-to-sql-env"
version = "1.0.0"
description = "Natural language to SQL query generation environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv",
    "pydantic>=2.0",
    "sqlglot",
    "pandas",
    "transformers>=4.30.0",
    "torch>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []