[project]
name = "text-to-sql-env"
version = "1.0.0"
description = "Natural language to SQL query generation environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv",
    "pydantic>=2.0",
    "sqlglot",
    "pandas",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "uvicorn",
    "fastapi",
    "openai",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
