[project]
name = "text-to-sql-env"
version = "1.0.0"
description = "Natural language to SQL query generation environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "openenv>=0.2.0",
    "pydantic>=2.0",
    "sqlglot",
    "pandas",
    "uvicorn",
    "fastapi",
    "openai",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
